# gcovr_parallel_call

./: CMakeLists.txt  generate.sh
.github/workflows/: main.yml
src/: main.cc
